fix: fixed toolbar align items to center

--- a/front/src/components/Dashboard/Toolbar/Toolbar.scss
+++ b/front/src/components/Dashboard/Toolbar/Toolbar.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 2.5%;
   border-radius: 0.75rem;
 }
